# personal_assistant

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml
backend/: audio_devices.py  config.py  db.py  main.py  models.py  providers.py  repository.py  session.py
frontend/: index.html
helper/: audio_capture_windows.py  audio_devices.py  desktop_agent.py  local_helper.py  transcribe_stream.py  ui_agent.py
helper/packaging/: build_macos_desktop_agent.sh  build_windows_desktop_agent.ps1
web/: .env.example  README.md
web/src/app/: globals.css  layout.tsx  page.tsx
